Minor Makefile and git related fixes

--- a/Makefile.old
+++ b/Makefile.old
@@ -6,9 +6,8 @@ CC= g++
 #  -Wall turns on most, but not all, compiler warnings
 CXXFLAGS= -std=c++17 -g -Wall
 
-OBJECTS = ./planet/planet.o ./population/populationunit.o ./planet/districts/district.o \
-			./planet/buildings/building.o ./attributes/attributes.o ./planet/districts/districtfactory.o
-HEADERS := $(shell find . -path ./test -prune -o -name "*.hpp" -print)
+OBJECTS := $(shell find . -prune -o -name "*.cpp" -print)
+HEADERS := $(shell find . -prune -o -name "*.hpp" -print)
 
 .PHONEY: main clean build run delds
 
